frontend/src/pages/Home/styles.css
/* ===== HOME - HERO ===== */
.home-hero {
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: black;
    overflow-y: hidden;
}

.hero-video {
    min-width: 220px;
    width: 100%;
    max-width: 1536px;
    height: 80%;
    aspect-ratio: 2/1;
    object-fit: cover;
}

.home-hero-text {
    display: flex;
    justify-content: center;
    align-items: start;
    margin-top: 20px;
    width: 100%;
    height: 30%;
}

.home-hero-text h1 {
    color: #FFF;
    font-family: "Poppins", sans-serif;
    font-weight: 300;
    font-size: 3rem;
    text-transform: uppercase;
    text-align: center;
    text-shadow: 0 0 10px #FFF, 0 0 20px #eeeeee, 0 0 40px #eeeeee, 0 0 80px #eeeeee;
}

.home-hero-text h1 span {
    color: #FFF;
    font-family: "Great Vibes", cursive;
    font-weight: 400;
    font-size: 14rem;
    line-height: 0.75em;
    text-transform: lowercase;
    text-shadow: 0 0 10px #FFF, 0 0 20px #eeeeee, 0 0 40px #eeeeee, 0 0 80px #eeeeee;
}

@media screen and (max-width: 640px),
screen and (max-height: 640px) {
    .hero-video {
        height: calc(100vh - 60px);
        width: 100%;
    }

    .home-hero-text {
        width: 50%;
    }

    .home-hero-text h1 {
        font-size: 2rem;
    }

    .home-hero-text h1 span {
        font-size: 9.35rem;
        line-height: 0.75em;
    }
}

/* ===== HOME - MISSION ===== */
.home-mission {
    position: relative;
    display: flex;
    flex-direction: column;
    width: 100%;
    height: 420px;
}

.home-mission h3 {
    font-family: "League Spartan", sans-serif;
    font-size: 2.5rem;
    font-weight: 900;
}

.home-mission-text {
    font-family: "Antic Didone", serif;
    font-size: 6.4rem;
    font-weight: 500;
}

.home-mission-images-container {
    position: absolute;
    bottom: -30%;
    left: 0;
    display: flex;
    gap: 20px;
    justify-content: center;
    width: 100%;
}

.home-mission-images-container img {
    border-radius: 15px;
    width: 33%;
    min-width: 220px;
    max-width: 420px;
    min-height: 210px;
    max-height: 360px;
    object-fit: cover;
    object-position: top;
    box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.75);
}

.home-mission-tight-images-container {
    position: absolute;
    bottom: -65%;
    left: 0;
    display: none;
    gap: 20px;
    justify-content: center;
    width: 100%;
}

.home-mission-tight-images-container div {
    display: flex;
    flex-direction: column;
    gap: 20px;
}

.home-mission-tight-images-container img {
    border-radius: 15px;
    object-fit: cover;
    object-position: top;
    box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.75);
}

#home-mission-image-a {
    margin-top: 20px;
    width: 160px;
    height: 220px;
}

#home-mission-image-b {
    width: 200px;
    height: 175px;
}

#home-mission-image-c {
    width: 200px;
    height: 175px;
}

.home-mission-know-us {
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: end;
    border-radius: 15px;
    padding: 20px;
    width: 160px;
    height: 120px;
    background-color: #9E3E01;
}

.home-mission-know-us p {
    color: #FFF;
    font-family: "League Spartan", sans-serif;
    font-size: 2rem;
    font-weight: 900;
    text-transform: uppercase;
    text-align: right;
}

.home-mission-arrow {
    position: absolute;
    right: 20px;
    bottom: 0px;
    min-width: 50px;
    min-height: 50px;
    color: #FFC642;
}

@media screen and (max-width: 1536px) {
    .home-mission-text {
        font-size: 5.2rem;
    }
}

@media screen and (max-width: 1280px) {
    .home-mission-text {
        font-size: 4rem;
    }
}

@media screen and (max-height: 640px) {
    .home-mission {
        height: 340px;
    }

    .home-mission-images-container {
        bottom: -15%;
    }

    .home-mission-images-container img {
        min-width: 150px;
        max-width: 250px;
        min-height: 140px;
        max-height: 210px;
    }

}

@media screen and (max-width: 640px) {
    .home-mission-images-container {
        display: none;
    }

    .home-mission-tight-images-container {
        display: flex;
    }

    .home-mission {
        height: 380px;
    }
}

/* ===== HOME - ABOUT ===== */
.home-about {
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: end;
    text-align: center;
}

.home-about-bg-image {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: black;
    z-index: -1;
}

.home-about-bg-image::after {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.8);
}

.home-about-bg-image img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: center;
}

.home-about h3 {
    margin-bottom: 20px;
    color: #FFF;
    font-family: "League Spartan", sans-serif;
    font-size: 3rem;
    font-weight: 500;
}

.home-about h3 strong {
    font-size: 3rem;
    font-weight: 700;
}

.home-about-list {
    width: 100%;
}

.home-about-list li {
    margin: 10px 0;
    color: #FFF;
    font-family: "League Spartan", sans-serif;
    font-size: 2rem;
    font-weight: 500;
}

.home-about-list li strong {
    font-size: 2rem;
    font-weight: 700;
}

.home-about-list hr {
    margin: 5px auto;
    border: none;
    width: 33%;
    max-width: 320px;
    height: 2px;
    background-color: #FFC642;
}

@media screen and (max-height: 640px) {
    .home-about-list {
        display: flex;
        justify-content: center;
        gap: 5%;
        width: 100%;
    }

    .home-about-list hr {
        width: 120px;
    }
}

/* ============================================================================================ */
.about-paradigm {
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: rgba(0, 0, 0, 0.45);
}

.about-paradigm-bg-image {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: black;
    z-index: -1;
}

.about-paradigm-bg-image img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: center;
}

.about-paradigm h1 {
    display: flex;
    flex-direction: column;
    min-width: 220px;
    width: 50%;
    max-width: 570px;
    color: white;
    font-family: 'League Spartan', sans-serif;
    font-size: 16rem;
    font-weight: 700;
    text-align: start;
}

.about-paradigm-text-container {
    display: flex;
    flex-direction: column;
    justify-content: end;
    gap: 20px;
    width: 100%;
    flex: 1;
    min-height: 0;
}

.about-paradigm-text-box {
    width: 100%;
}

.about-paradigm-text-box h3 {
    color: #FFF;
    font-family: "League Spartan", sans-serif;
    font-size: 3rem;
    font-weight: 500;
    text-align: start;
}

.about-paradigm-text-box:nth-child(2) h3 {
    text-align: end;
}

.about-paradigm-text-box p {
    border-radius: 8px;
    padding: 8px 16px;
    background-color: #ff440099;
    color: #FFF;
    font-family: "League Spartan", sans-serif;
    font-size: 2.5rem;
    font-weight: 700;
    text-align: start;
}

.about-paradigm h1 span:nth-of-type(1) {
    text-align: start;
}

.about-paradigm h1 span:nth-of-type(2) {
    text-align: end;
}

@media screen and (max-width: 640px) {
    .about-paradigm h1 {
        font-size: 10rem;
    }

    .about-paradigm-text-box h3 {
        font-size: 2.5rem;
    }

    .about-paradigm-text-box p {
        font-size: 2rem;
    }
}

@media screen and (max-height: 640px) {
    .about-paradigm h1 {
        display: none;
    }

    .about-paradigm-text-box h3 {
        font-size: 2rem;
    }

    .about-paradigm-text-box p {
        font-size: 1.5rem;
    }
}

/* ===== ABOUT - PASTOR ===== */
.about-pastor {
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    background-color: rgba(0, 0, 0, 0.45);
}

.about-pastor:nth-last-of-type(2) {
    justify-content: end;
}

.about-pastor-bg-image {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: black;
    z-index: -1;
}

.about-pastor-bg-image img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: center;
}

.about-pastor h2,
.about-pastor h3 {
    color: #FFF;
    font-family: "League Spartan", sans-serif;
    font-size: 6rem;
    font-weight: 700;
    text-transform: uppercase;
}

@media screen and (max-width: 1024px) {
    .about-pastor-bg-image img {
        object-fit: cover;
    }
}

@media screen and (max-width: 640px) {

    .about-pastor h2,
    .about-pastor h3 {
        font-size: 3rem;
    }
}


@media screen and (max-height: 640px) {

    .about-pastor h2,
    .about-pastor h3 {
        font-size: 3rem;
    }
}

